plugins {
    id 'java-library'
}

dependencies {
    api 'com.google.guava:guava:33.3.1-jre'
    api 'org.fusesource.jansi:jansi:2.4.1'
    api 'org.jspecify:jspecify:1.0.0'
    api 'com.github.ben-manes.caffeine:caffeine:3.1.8'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += "--enable-preview"
}

tasks.withType(Test).configureEach {
    jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += '--enable-preview'
}
